adding the finale version

--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="public/css/style.css">
-    <title>Document</title>
+    <link rel="icon" href="public/img/logo.png" />
+    <title>Stackoverflow</title>
 </head>
 <header class="header">
+  <img src="public/img/stack.png" alt="">
     <h1>Fast Research On Stackoverflow</h1>
 </header>
 
 <body>
     <main class="main">
         <form method="post">
-            <input type="text" id="inputlang" aria-label="input">
+            <input type="text" id="inputlang" aria-label="input" placeholder="Please Enter A language">
             <button id="btn">Search</button>
         </form>
     </main>
