--- a/public/errp.html
+++ b/public/errp.html
@@ -7,8 +7,13 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>ERORR PAGE</h1>
-  <h2>page not found 404 </h2>
+  <section class="container">
+    <img src="public/img/smile.png" alt="sad face">
+    <h1>404</h1>
+    <h2>Page not found 404 </h2>
+    <p>The page you are looking for doesn't exist or an other erorr occurred</p>
+  </section>
+
 
 </body>
 </html>
