adding the loading icon

--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,11 @@
             <button id="btn">Search</button>
         </form>
     </main>
+      <div id="loadingimg"></div>
     <section id="sec">
         <div id="error"></div>
         <div id="result">
+
     </section>
     </div>
 
